h1 added with name and role on index page, and colour for heading in CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <div class="row">
             <a class="col-md-4 logo" href="index.html"></a>
             <div class="col-md-8">
-        
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Farah Maria Rahman</h1>
+                        <h2 class="title">Writer</h2>
+                    </div>
+                </div>
             </div>
         </div>
 
