--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            Rosie Odenkirk
+                            Farah Rahman
                         </p>
                     </div>
                 </div>
