--- a/interests.html
+++ b/interests.html
@@ -196,6 +196,9 @@
         </div>
 
     </footer>
+    <script>
+        var APIKey = "AIzaSyAoIdZVGj_10Xh9n8rPgS8ClB8Ay3UDxBw";
+    </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
