add send email script to top of contact.html page

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <script type="text/javascript"> 
         (function(){
             emailjs.init("-ZnZL_AhOSylJkP-1");
+            emailjs.send("service_aq3s4ds", "template_wb9a2io", {name: "James", notes: "The project that I want is..."}, "-ZnZL_AhOSylJkP-1");
         })();
     </script>
 
