--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <script type="text/javascript"> 
         (function(){
             emailjs.init("-ZnZL_AhOSylJkP-1");
-            emailjs.send("service_aq3s4ds", "template_wb9a2io", {name: "James", notes: "The project that I want is..."}, "-ZnZL_AhOSylJkP-1");
+            /**emailjs.send("service_aq3s4ds", "template_wb9a2io", {name: "James", notes: "The project that I want is..."}, "-ZnZL_AhOSylJkP-1");**/
         })();
     </script>
 
@@ -58,7 +58,7 @@
                 <h5 class="uppercase text-center">Let's work together!</h5>
 
                 <div class="center-form">
-                    <form>
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                         <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required></textarea>
@@ -135,5 +135,6 @@
             </div>
         </div>
     </footer>
+    <script src="assets/js/sendEmail.js"></script>
 </body>
 </html>
